--- a/src/components/Pagination/style.css
+++ b/src/components/Pagination/style.css
@@ -66,6 +66,40 @@ li .activePageLink:hover {
   border-radius: 50%;
 }
 
+@media (max-width: 992px) {
+  .pageContainer,
+  .previous,
+  .next,
+  .break,
+  .pageLink,
+  .break > a {
+    font-size: 17px;
+    line-height: 36px;
+  }
+}
+@media (max-width: 768px) {
+  .pageContainer,
+  .previous,
+  .next,
+  .break,
+  .pageLink,
+  .break > a {
+    font-size: 16px;
+    line-height: 34px;
+  }
+}
+@media (max-width: 440px) {
+  .pageContainer,
+  .previous,
+  .next,
+  .break,
+  .pageLink,
+  .break > a {
+    font-size: 15px;
+    line-height: 32px;
+  }
+}
+
 
 
 
