--- a/src/typography/common.css
+++ b/src/typography/common.css
@@ -16,3 +16,22 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@media (max-width: 992px) {
+  body {
+    font-size: 15px;
+    line-height: 22px;
+  }
+}
+@media (max-width: 768px) {
+  body {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+@media (max-width: 440px) {
+  body {
+    font-size: 13px;
+    line-height: 18px;
+  }
+}
